# python-poetry-cicd

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: bump.yml  deploy.yml  integrate.yml  release.yml
actions/: __init__.py  __main__.py
application/: __main__.py
